# fsi-suite

./: .gitignore  01__design_8dox.html  CMakeLists.txt  CONTRIBUTORS.md  README.md  _p_d_es.html  _r_e_a_d_m_e_8md.html  amg_8cc.html  amg_8cc.js  amg_8cc__incl.dot  amg_8cc__incl.map  amg_8cc__incl.md5  amg_8cc_source.html  amg_8h.html  amg_8h__dep__incl.dot  amg_8h__dep__incl.map  amg_8h__dep__incl.md5  amg_8h__incl.dot  amg_8h__incl.map  amg_8h__incl.md5  amg_8h_source.html  amg__muelu_8cc.html  amg__muelu_8cc.js  amg__muelu_8cc__incl.dot  amg__muelu_8cc__incl.map  amg__muelu_8cc__incl.md5  amg__muelu_8cc_source.html  amg__muelu_8h.html  amg__muelu_8h__dep__incl.dot  amg__muelu_8h__dep__incl.map  amg__muelu_8h__dep__incl.md5  amg__muelu_8h__incl.dot  amg__muelu_8h__incl.map  amg__muelu_8h__incl.md5  amg__muelu_8h_source.html  amg__petsc_8cc.html  amg__petsc_8cc__incl.dot  amg__petsc_8cc__incl.map  amg__petsc_8cc__incl.md5  amg__petsc_8cc_source.html  (+1558 more)
.devcontainer/: Dockerfile  devcontainer.json
apps/: dof_plotter.cc  mesh_handler.cc  serial_poisson.cc
book_prms/: chapter_1_example_1_1_p1_regular.prm  chapter_1_example_1_2_p2_regular.prm  chapter_1_example_1_3_q2_regular.prm  chapter_1_example_1_4_mixed_poisson.prm  chapter_1_example_1_5_stokes.prm  chapter_1_example_1_6_stokes_q2p1.prm  chapter_1_example_3_1_babuska_bc.prm  chapter_1_fig_01_poisson_regular_grid.prm  chapter_2_example_2_1_matching_balls.prm  chapter_2_example_2_1_pacman_0.prm  chapter_2_example_2_1_pacman_1.prm  chapter_2_example_2_1_pacman_2.prm  chapter_2_example_2_1_pacman_3.prm  chapter_2_example_2_1_pacman_4.prm  chapter_2_example_2_2_non_matching_balls.prm
dealii_tests/: CMakeLists.txt  cgal_01.cc  cgal_01.output  codim0_sparsity_pattern_exact.cc  codim_01_intersections_quad_pts.cc  codim_01_intersections_quad_pts.output  codim_01_nitsche_matrix.cc  codim_01_nitsche_matrix.output  intersection_rotated.cc  intersection_rotated.output  template.cc
doc/: 01_design.dox  Doxyfile  copyright.txt  parsed_tools.dox  pdes.dox
docker/: Dockerfile  Dockerfile.fsi-suite  build.sh  copy_output.sh  copy_test.sh  d2check.sh  newdocentry.sh  work_on_test.sh
fsi_book/: chapter_1.cc  chapter_2.cc  fsi_book_main.cc
grids/: flow_around_finger.geo  flow_around_finger.geo_unrolled  flow_around_finger.msh  flow_around_finger_equilibrium.geo  flow_around_finger_equilibrium.msh  pacman.geo  pacman_0.msh  pacman_1.msh  pacman_2.msh  pacman_3.msh  pacman_4.msh
gtests/: boolean_difference.cc  cgal_triangulation.cc  compute_intersection_of_cells.cc  compute_linear_transformation.cc  constants.cc  data_out.cc  dim_spacedim_tester.h  finite_element.cc  function.cc  grid_generator.cc  inverse_operator.cc  lagrange_multiplier_test.cc  mapping_eulerian.cc  moonlith_interface.cc  moonolith_intersection.cc  moonolith_intersection_codim1.cc  moonolith_tools.cc  non_matching_coupling.cc  projection_operator.cc  runner.cc  tests.h
include/: assemble_coupling_exact.h  assemble_coupling_mass_matrix_with_exact_intersections.h  assemble_nitsche_exact.h  assemble_nitsche_with_exact_intersections.h  compute_intersection_of_cells.h  compute_intersections.h  compute_intersections_of_tria.h  compute_linear_transformation.h  coupling_utilities.h  create_coupling_sparsity_pattern_with_exact_intersections.h  create_exact_rhs.h  create_exact_sparsity.h  create_nitsche_rhs_with_exact_intersections.h  deal_moon_conversion.h  deal_moon_conversion.hpp  lac.h  lac_initializer.h  mesh_handler.h  moonolith_tools.h  parsed_grid_generator.h  projection_operator.h  runner.h  serial_poisson.h  template.noh
notebooks/: manufactured_solution.ipynb  manufactured_solution_poisson.ipynb
parameters/: used_distributed_lagrange_2d_1d.prm
prms/: ale_compressible_navier_stokes.prm  cylinder_2d_3d.prm  distributed_lagrange_1d_2d.prm  distributed_lagrange_elasticity.prm  giraudo_1d_2d.prm  lid_driven.prm  lid_driven_petsc.prm  mpi_babuska_2d.prm  mpi_distributed_lagrange_1d_2d.prm  mpi_heat.prm  mpi_linear_visco_elasticity.prm  mpi_linear_visco_elasticity_fsi.prm  mpi_poisson.prm  mpi_poisson_quasi_static.prm  parameters_poisson_interface_2d_3d.prm  poisson_estimator.prm  quasi_static_shear.prm  shear.prm
scripts/: filter.pl  newclass.sh  newt.sh  newtest.sh  update_copyright.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.html  all_22.js  all_23.html  all_23.js  all_24.html  all_24.js  all_25.html  all_25.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  (+251 more)
source/: amg.cc  amg_muelu.cc  assemble_coupling_exact.cc  assemble_coupling_mass_matrix_with_exact_intersections.cc  assemble_nitsche_exact.cc  assemble_nitsche_with_exact_intersections.cc  boundary_conditions.cc  components.cc  compute_intersection_of_cells.cc  compute_intersections.cc  compute_intersections_of_tria.cc  constants.cc  create_coupling_sparsity_pattern_with_exact_intersections.cc  create_exact_rhs.cc  create_exact_sparsity.cc  create_nitsche_rhs_with_exact_intersections.cc  data_out.cc  finite_element.cc  function.cc  grid_generator.cc  grid_refinement.cc  ilu.cc  jacobi.cc  mapping_eulerian.cc  non_matching_coupling.cc  parsed_boundary_conditions.cc  parsed_constants.cc  parsed_data_out.cc  parsed_finite_element.cc  parsed_function.cc  parsed_grid_generator.cc  parsed_grid_refinement.cc  parsed_inverse_operator.cc  parsed_symbolic_function.cc  patterns_unsigned_int.cc  runner.cc  serial_poisson.cc  symbolic_function.cc  template.nocc
tests/: boundary_conditions.cc  components.cc  compute_intersection_of_cells.cc  compute_linear_transformation.cc  constants.cc  data_out.cc  dim_spacedim_tester.h  enum.cc  finite_element.cc  function.cc  grid_generator.cc  grid_refinement.cc  gtest_main.cc  inverse_operator.cc  mapping_eulerian.cc  parsed_boundary_conditions.cc  parsed_constants.cc  parsed_data_out.cc  parsed_enum.cc  runner.cc  (+11 more)
(+117 files in other folders)
